--- a/index.html
+++ b/index.html
@@ -246,7 +246,6 @@
                     <section>
                         <h2>Comparison</h2>
                         <ul>
-                            <li>TODO COMPARE FLAG</li>
                             <li class="fragment">CMP #$00 | Compare A to the value $01</li>
                             <li class="fragment">CPX $01  | Compare X to the value stored in addr $01</li>
                             <li class="fragment">CPY #%10101010 | Compare Y to the binary literal</li>
@@ -485,6 +484,7 @@
                        <li>
                            <a href="http://www.nespowerpak.com/nesasm/">NESASM3</a>
                        </li>
+                       <li><a href="https://www.retrousb.com/product_info.php?products_id=34">RetroUSB PowerPak</a></li>
                        <li>
                            <a href="https://erikonarheim.com/NES-Sprite-Editor/">Erik's Sprite Editor</a>
                        </li>
